--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.2</version>
+		<version>2.4.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.devsuperior</groupId>
-	<artifactId>dsdeliver</artifactId>
+	<artifactId>dslearn</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dsdeliver</name>
+	<name>dslearn</name>
 	<description>Projeto Semana DevSuperior 2.0</description>
 
 	<properties>
